examples/type_system/failing/29_strict_missing_main.flx
fn inc(x: Int) -> Int {
    x + 1
}
